[package]
name = "tile-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
crossbeam-channel = "0.5.11"
env_logger = "0.11.0"
log = "0.4.14"
single-instance = "0.3.3"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi"
] }
